ajuste splash screen, barra de titulo, adicao de novas imagens, paddings nos botoes card times.

--- a/www/interno/times.html
+++ b/www/interno/times.html
@@ -151,8 +151,8 @@
                         <p class="card-text text-white">{{descricao_time}}. Responsável: {{nome_tratamento}},</p>
                     </div>
                     <div class="card-footer card-transparente border border-0 gap-3 pb-3">
-                        <button id="btn1" class="btn btn-secondary">Adicionar membro</button>
-                        <button id="btn3" class="btn btn-secondary">Editar</button>
+                        <button id="btn1" class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#modal_membro">Adicionar membro</button>
+                        <button id="btn3" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal_editar">Editar</button>
                     </div>
 
                 </div>
