Ajuste de design e alinhamento vertical index, home e criar-conta.

--- a/www/home.html
+++ b/www/home.html
@@ -39,7 +39,7 @@
                 <main class="w-100 d-flex justify-content-center mb-4">
                     <div class="col-12 col-sm-10 col-md-8 col-lg-10 col-xl-9 col-xxl-8 p-4 p-md-5 p-lg-6 glass-background-solid">
                         <div class="text-center mb-4">
-                            <img src="assets/images/Spacefeed%20AVP%20-%2003.png" class="img-fluid mb-4" width="160" alt="Spacefeed Logo">
+                            <img src="assets/images/Spacefeed%20AVP%20-%2001.png" class="img-fluid mb-4" width="160" alt="Spacefeed Logo">
                             <p class="h6 text-muted mb-0">Acesse o seu CRM de atendimento e prospecção de alunos</p>
                         </div>
 
@@ -71,7 +71,7 @@
 
                 <!-- Copyright -->
                 <footer class="text-center px-3">
-                    <p class="mini-titulo mb-0 p-1 rounded-2">© Spacefeed é uma marca registrada de RKS Tech Solution. Todos os direitos reservados.</p>
+                    <p class="mini-titulo mb-0 p-1 rounded-2 bg-white bg-opacity-75">© Spacefeed é uma marca registrada de RKS Tech Solution. Todos os direitos reservados.</p>
                 </footer>
             </div>
         </div>
