--- a/www/interno/times.html
+++ b/www/interno/times.html
@@ -148,11 +148,11 @@
                         <h3 class="text-white">{{nome_time}}</h3>
                     </div>
                     <div class="card-body card-transparente">
-                        <p class="card-text text-white">{{descricao_time}}. Responsável: {{nome_tratamento}},</p>
+                        <p class="card-text text-white">{{descricao_time}}. <b>Responsável:</b> {{nome_tratamento}}.</p>
                     </div>
                     <div class="card-footer card-transparente border border-0 gap-3 pb-3">
-                        <button id="btn1" class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#modal_membro">Adicionar membro</button>
-                        <button id="btn3" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal_editar">Editar</button>
+                        <button id="btn1" class="btn btn-secondary me-3" data-bs-toggle="modal" data-bs-target="#modal_membro" dmx-on:click="data_time.select(id_times)">Adicionar membro</button>
+                        <button id="btn3" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal_editar" dmx-on:click="data_time.select(id_times)">Editar</button>
                     </div>
 
                 </div>
