Ajuste menu superior e mega menu

--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -55,15 +55,26 @@
         <div class="container-fluid py-4  border-top border-bottom border-info">
             <div class="row">
                 <div class="col align-self-center">
-                    <div class="d-flex align-items-center gap-2"><a href="/in/security/" internal="true" class="me-4"><img src="../assets/images/Spacefeed%20AVP%20-%2006.png" class="img-fluid m-0" width="220"></a>
-                        <div class="nav w-100 align-items-center gap-1">
-                            <a class="nav-item nav-link text-white lh-1" href="/in/security/empresa" internal="true">Empresas</a>
-                            <a class="nav-item nav-link text-white lh-1" href="/in/security/colaborador" internal="true">Colaboradores</a>
-                            <a class="nav-item nav-link text-white lh-1" href="/in/security/times" internal="true">Times</a>
-                            <a class="nav-item nav-link text-white lh-1" href="/in/security/leads" internal="true">Leads</a>
-                            <a class="nav-item nav-link text-white lh-1" href="/in/security/funil-de-vendas" internal="true">Funil de vendas</a>
-                        </div>
 
+                    <div class="dropdown">
+                        <button id="dropdown1" class="btn dropdown-toggle btn-outline-light" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars me-2"></i>Menu</button>
+                        <div class="dropdown-menu mega-menu p-4" aria-labelledby="dropdown1">
+                            <div class="d-flex flex-row">
+                                <div class="d-flex">
+                                    <img src="../assets/images/15-dark.png" class="img-fluid" width="256" height="256">
+                                </div>
+                                <div class="d-flex flex-column">
+                                    <h3 class="ms-3">Menu</h3>
+                                    <div class="nav w-100 flex-column">
+                                        <a class="nav-item nav-link text-black" href="/in/security/empresa" internal="true">Empresa</a>
+                                        <a class="nav-item nav-link text-black" href="/in/security/colaborador" internal="true">Colaboradores</a>
+                                        <a class="nav-item nav-link text-black" href="/in/security/times" internal="true">Times</a>
+                                        <a class="nav-item nav-link text-black" href="/in/security/leads" internal="true">Leads</a>
+                                        <a class="nav-item nav-link text-black" href="/in/security/funil-de-vendas" internal="true">Funil de vendas</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-5">
