pagina funil de vendas e card

--- a/www/interno/funil-de-vendas.html
+++ b/www/interno/funil-de-vendas.html
@@ -48,5 +48,17 @@
 </header>
 <main class="px-4">
     <div class="container-fluid bg-white rounded-4 p-4 container-minimo shadow">
+        <div class="row" is="dmx-repeat" id="repeat_funil" dmx-bind:repeat="listar_funil.data.query_funil" key="id_board">
+            <div class="col-4 p-3">
+                <div class="card border-warning">
+                    <div class="card-body">
+                        <h3 class="card-title">{{nome_board}}</h3>
+                        <p class="card-text">{{descricao_board}}</p>
+                        <p class="card-text"><b>Time:</b> {{nome_time}}</p>
+                        <a href="#" class="btn btn-warning">Acessar funil</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
