--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -63,14 +63,14 @@
                                 <div class="d-flex">
                                     <img src="../assets/images/15-dark.png" class="img-fluid" width="256" height="256">
                                 </div>
-                                <div class="d-flex flex-column">
+                                <div class="d-flex flex-column ps-4">
                                     <h3 class="ms-3">Menu</h3>
                                     <div class="nav w-100 flex-column">
                                         <a class="nav-item nav-link text-black" href="/in/security/empresa" internal="true">Empresa</a>
                                         <a class="nav-item nav-link text-black" href="/in/security/colaborador" internal="true">Colaboradores</a>
                                         <a class="nav-item nav-link text-black" href="/in/security/times" internal="true">Times</a>
-                                        <a class="nav-item nav-link text-black" href="/in/security/leads" internal="true">Leads</a>
-                                        <a class="nav-item nav-link text-black" href="/in/security/funil-de-vendas" internal="true">Funil de vendas</a>
+                                        <a class="nav-item nav-link text-black" href="/in/security/funil-de-vendas" internal="true">Funil de vendas</a><a class="nav-item nav-link text-black" href="/in/security/leads" internal="true">Leads</a>
+
                                     </div>
                                 </div>
                             </div>
