Titulos modais de editar corrigido.

--- a/www/interno/empresa.html
+++ b/www/interno/empresa.html
@@ -149,7 +149,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Cria nova empresa</h5>
+                <h5 class="modal-title">Editar empresa</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" dmx-on:click="form_criar_empresa.reset()"></button>
             </div>
             <div class="modal-body p-4">
