--- a/www/interno/colaborador.html
+++ b/www/interno/colaborador.html
@@ -59,7 +59,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Criar colaborador</h5>
+                <h5 class="modal-title">Editar colaborador</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" dmx-on:click="form_criar_colaborador.reset()"></button>
             </div>
             <div class="modal-body p-4">
