--- a/www/interno/times.html
+++ b/www/interno/times.html
@@ -44,7 +44,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Criar novo time</h5>
+                <h5 class="modal-title">Editar time</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" dmx-on:click="data_time.select(0);form_editar_time.reset()"></button>
             </div>
             <div class="modal-body p-4">
