ajuste de dados para funil selecionado.

--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -27,9 +27,11 @@
     <script src="../dmxAppConnect/dmxValidator/dmxValidator.js" defer></script>
     <script src="../dmxAppConnect/dmxDataTraversal/dmxDataTraversal.js" defer></script>
     <script src="../dmxAppConnect/dmxBootstrap5Offcanvas/dmxBootstrap5Offcanvas.js" defer></script>
+    <script src="../dmxAppConnect/dmxDatastore/dmxDatastore.js" defer></script>
 </head>
 
 <body is="dmx-app" id="backoffice" class="bg-backoffice">
+    <dmx-value id="id_funil_selecionado"></dmx-value>
 
 
 
