Update de nome da lista do funil. mudança na de variavel para session storage pro filtro de funil selecioado.

--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -31,7 +31,7 @@
 </head>
 
 <body is="dmx-app" id="backoffice" class="bg-backoffice">
-    <dmx-value id="id_funil_selecionado"></dmx-value>
+    <dmx-session-manager id="funil"></dmx-session-manager>
 
 
 
